--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -15,29 +15,49 @@ main {
 
 .resume-view {
     width: 350px;
-    // margin: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-bottom: 80px;
-    text-align: center;
-    .portrait, h2 {
-        cursor: pointer;
-    }
-    .portrait {
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        object-fit: cover;
+    // text-align: center;
+    .link-portrait {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .portrait, .title-name {
+            cursor: pointer;
+        }
+        .portrait {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            object-fit: cover;
+        }   
+        .title-name {
+            font-size: 36px;
+            font-weight: 400;
+            color: $secondary-color;
+        } 
     }
     p {
         padding: 2px;
     }
-    .localisation {
+    .localisation-index,
+    .tagline-index,
+    .price {
+        padding: 2px;
+    }
+    .localisation-index {
         color: $primary-color;
-        font-size: 13px;   
+        font-size: 13px; 
+        font-weight: 400;
+        font-style: normal;  
     }
     .tagline {
         font-size: 10px;
     }
     .price {
+        margin-bottom: 5px;
         font-size: 9px;
         color: #757575;
     }
