--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ header {
   position: fixed;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[4];
+  -ms-grid-columns: repeat(4, 1fr);
       grid-template-columns: repeat(4, 1fr);
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -471,7 +471,7 @@ main {
   .full-view {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[1];
+    -ms-grid-columns: repeat(1, 1fr);
         grid-template-columns: repeat(1, 1fr);
     justify-items: center;
   }
